<resources>
    <string name="app_name">Firebase Chat</string>
    <string name="btnSaveTxt">Guardar</string>
    <string name="lbEmail">Email</string>
    <string name="txtEmailHint">ej. miEmail@gmail.com</string>
    <string name="lbPassword">Password</string>
    <string name="textViewLoginTitle">Firebase Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbNotAccount">¿No tienes cuenta?</string>
    <string name="btnSignUptxt">Sign Up</string>
    <string name="btnLoginTxt">Log In</string>
</resources>