<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".view.RegisterFragment">

    <TextView
        android:id="@+id/lbLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/textViewLoginTitle"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmailHint"
        android:text="@string/lbEmail"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtEmailHint"
        android:inputType="textEmailAddress"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/lbPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/lbPassword"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/colorSignup"
        android:text="@string/btnSignUptxt"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>